[gd_scene load_steps=17 format=3 uid="uid://drvu7b5ejkpca"]

[ext_resource type="Script" path="res://src/widgets/w_settings.gd" id="1_fpo2h"]
[ext_resource type="Texture2D" uid="uid://di0c62wqxxpxk" path="res://assets/testures/widgets/UIbg.png" id="1_fu1t0"]
[ext_resource type="Texture2D" uid="uid://bu45n00mh538b" path="res://assets/testures/widgets/letters/letterS.png" id="2_kje5s"]
[ext_resource type="Texture2D" uid="uid://csf5xxgu6t0fv" path="res://assets/testures/widgets/letters/letterE.png" id="3_piii3"]
[ext_resource type="Texture2D" uid="uid://bq8acldburxay" path="res://assets/testures/widgets/letters/letterT.png" id="4_gr8dt"]
[ext_resource type="Texture2D" uid="uid://dvp0plc638c1i" path="res://assets/testures/widgets/letters/letterI.png" id="5_bpsr1"]
[ext_resource type="Texture2D" uid="uid://ntkwuab7qwvb" path="res://assets/testures/widgets/letters/letterN.png" id="6_6eavm"]
[ext_resource type="Texture2D" uid="uid://vjyjngb1ybto" path="res://assets/testures/widgets/letters/letterG.png" id="7_twg3g"]
[ext_resource type="Texture2D" uid="uid://cl2yee46qr3ib" path="res://assets/testures/widgets/icons/audioOn.png" id="8_y7v7o"]
[ext_resource type="Texture2D" uid="uid://bbgeydhqey4vx" path="res://assets/testures/widgets/icons/musicOn.png" id="10_ww3rg"]
[ext_resource type="AudioStream" uid="uid://ojqsx4622dsq" path="res://assets/audio/sound/click1.ogg" id="11_7xaxl"]
[ext_resource type="Texture2D" uid="uid://cf4urcy4ejis2" path="res://assets/testures/widgets/yellow_button00.png" id="11_spmnh"]
[ext_resource type="Texture2D" uid="uid://557yoruptc35" path="res://assets/testures/widgets/yellow_button01.png" id="12_c0wct"]
[ext_resource type="Texture2D" uid="uid://qpgp5abh36po" path="res://assets/testures/widgets/yellow_button02.png" id="13_u58r1"]
[ext_resource type="Texture2D" uid="uid://bllad25nq28qn" path="res://assets/testures/widgets/grey_button00.png" id="14_lamoy"]

[sub_resource type="LabelSettings" id="LabelSettings_wc3nf"]
font_size = 24
outline_size = 3
outline_color = Color(0.0313726, 0.0313726, 0.0313726, 1)

[node name="w_settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fpo2h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("1_fu1t0")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_kje5s")

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_piii3")

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_gr8dt")

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_gr8dt")

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_bpsr1")

[node name="TextureRect6" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_6eavm")

[node name="TextureRect7" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_twg3g")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="btn_sound" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("8_y7v7o")

[node name="sfx_slider" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -50.0
max_value = 30.0

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2

[node name="btn_music" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("10_ww3rg")

[node name="bgm_slider" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = -50.0
max_value = 30.0

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="btn_confirm" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("11_spmnh")
texture_pressed = ExtResource("12_c0wct")
texture_hover = ExtResource("13_u58r1")
texture_disabled = ExtResource("14_lamoy")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer4/btn_confirm"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "confirm"
label_settings = SubResource("LabelSettings_wc3nf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioClick" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("11_7xaxl")
bus = &"SFX"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/btn_sound" to="." method="_on_btn_sound_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/sfx_slider" to="." method="_on_SFX_VolumeSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer/btn_music" to="." method="_on_btn_music_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MarginContainer3/HBoxContainer/bgm_slider" to="." method="_on_BGM_VolumeSlider_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer4/btn_confirm" to="." method="_on_btn_confirm_pressed"]
